# envmerge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
envmerge/: __init__.py  cli.py  core.py  diff.py  parser.py  printer.py
envsync/: __init__.py  cli.py  core.py  diff.py  parser.py
tests/: test_envmerge.py  test_envsync.py
