[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "envsync"
version = "0.1.0"
requires-python = ">=3.11"
description = "Deterministically sync .env files from .env.example"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "iosif2"}]

[project.scripts]
envsync = "envsync.cli:main"

[tool.setuptools]
packages = ["envsync"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
