[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "envmerge"
version = "0.1.0"
requires-python = ">=3.11"
description = "Deterministically sync .env files from .env.example"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "iosif2"}]
keywords = ["env", "dotenv", "cli", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/iosif2/envmerge"
Repository = "https://github.com/iosif2/envmerge"
Issues = "https://github.com/iosif2/envmerge/issues"

[project.scripts]
envmerge = "envmerge.cli:main"

[tool.setuptools]
packages = ["envmerge"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["envmerge"]
